# nscm-ege-result-parser

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs
