[package]
name = "nscm-ege-result-parser"
version = "0.1.0"
edition = "2024"
readme = "README.md"
authors = ["Aleksei Rybin <aleksei@tapni.su>"]
description = "CLI утилита для получения результатов ЕГЭ с сайта НИМРО"
keywords = ["terminal", "cli"]
license = "MIT"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = "0.12.20"
scraper = "0.23.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
